	Release 0.4.7
- Updated to RIFT 2.2

	Release 0.4.5
- New Search Tab:
 + Search auctions matching your search criteria both online and offline.
 + Provides several searchers in addition to the Basic one, which emulates the native AH behavior. Check LibPGCEx for more info on adding custom searchers.
 + Allows saving search parameters to reuse later.
- Post Tab:
 + Added Category filter to the item list.
 + Reorganized layout.
 + The "Number of auctions" slider behavior has been changed to allow more expressiveness when setting up Autoposting.
 + Added "Reset" button that resets posting parameters to those configured for the item's category.
- Posting Queue:
 + Moved out of the Post tab, to the bottom right corner of the addon window, available from any tab.
- Autoposting:
 + Now shares the same posting parameters than "normal" posting.
 + Items with Auto posting enabled will show their new lightning icon in full color, those with Auto posting disabled show the lightning icon grayed out.
 + The lightning icon on the Post tab allows to toggle Autoposting on/off with the currently introduced posting parameters.
 + The lightning icon on the Item List allows to toggle Autoposting on/off with the default posting parameters for the item's category (as if you had pressed the Reset button before enabling autoposting).
 + Autoposting will be deactivated upon item selection if the reference price isn't available.
 + Autoposting will be deactivated if any parameter is changed in the Post Tab, or when pressing the Reset button.
- Config tab:
 + Many changes and additions for the new features.
 + Added Prices section which allows tuning pricings for each item category independently.
 + Added poweful Price model editor in the Prices section. 
- Integration with other AddOns:
 + ImhoBags: Right clicking on items can now interact with the Search, Post and Selling tabs. Care: if you're on other tab or the BananAH window is closed, the item will be used as usual.